--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1,3 +1,28 @@
 .jumbotron{
     background-color:darkblue
 }
+
+
+#gregtable{
+
+    font-family: arial, sans-serif;
+    border-collapse: collapse;
+
+}
+
+td, th {
+    border: 1px solid #dddddd;
+    text-align: left;
+    height: 50px;
+    width: 50px;
+  
+}
+
+.greglink{
+
+    height:250px;
+    width:250px;
+    padding-top: .5em;
+    padding-bottom: .5em;
+
+}
