added card and spade routes

--- a/app/templates/components/greggames-table.hbs
+++ b/app/templates/components/greggames-table.hbs
@@ -1,14 +1,15 @@
-<div id="gregdiv">
+{{!-- <div id="gregdiv">
 
 
 <table id="gregtable">
-{{#each greggames as |greggame|}}
+
 <tr>
-<div>{{#link-to "greggames.spades"}}<button class="greglink" {{action "routeToGame" greggame}}>{{greggame}}</button>{{/link-to}}</div>
+<td><div>{{#link-to "cardgames"}}<button class="greglink" {{action "routeToGame" greggame}}>CARD GAMES</button>{{/link-to}}
+</div></td>
 </tr>
-{{/each}}
+
 
 </table>
 
-{{outlet}}
-</div>
+
+</div> --}}
