--- a/app/templates/greggames/gamelibrary.hbs
+++ b/app/templates/greggames/gamelibrary.hbs
@@ -1,1 +1,15 @@
-{{greggames-table greggames=model}}
+<div id="gregdiv">
+
+
+<table id="gregtable">
+
+<tr>
+<td><div>{{#link-to "cards"}}<button class="greglink">CARD GAMES</button>{{/link-to}}
+</div></td>
+</tr>
+
+
+</table>
+
+
+</div>
