added websocket code probably won't work

--- a/app/templates/greggames.hbs
+++ b/app/templates/greggames.hbs
@@ -1,8 +1,4 @@
-<div class="jumbotron container text-center">
-    <h1>Craig's Gregarious Games</h1>
-</div>
-
-
+{{greggames-header}}
 <div class="navbar navbar-default container">
     <div clss="container-fluid">
         <div class="navbar-header">
