--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -26,3 +26,69 @@ td, th {
     padding-bottom: .5em;
 
 }
+#activeGames {
+    font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+    top: 5%;
+    position:relative;
+}
+
+#activeGames td, #activeGames th {
+    border: 1px solid #ddd;
+    padding: 8px;
+}
+
+#activeGames tr:nth-child(even){background-color: #f2f2f2;}
+
+#activeGames tr:hover {background-color: #ddd;}
+
+#activeGames th {
+    padding-top: 12px;
+    padding-bottom: 12px;
+    text-align: left;
+    background-color: rgb(38, 54, 56);
+    color: white;
+}
+#buttonTable{
+
+    width: 100%;
+    height:100%;
+    position:relative
+}
+
+#buttonTable td, #buttonTable th {
+    width:50%
+}
+#newGameButton {
+
+
+    width:100%; 
+    height:100%; 
+    background-color:#5575a8; 
+    color:yellow; 
+    font-size:30px;
+    position:relative
+}
+
+#newGameDiv{
+
+    position: absolute;; 
+    left:60%; 
+    top:90%; 
+    border:3px dotted blue; 
+    width:400px; 
+    height:50px
+}
+
+input[type=text], select {
+    width: 40%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+
+
