--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -30,25 +30,60 @@ td, th {
     font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
     border-collapse: collapse;
     width: 100%;
+    
     top: 5%;
-    position:relative;
+  
+
+
 }
 
-#activeGames td, #activeGames th {
-    border: 1px solid #ddd;
-    padding: 8px;
+#activeGames thead {
+
+  
+    float: left;
+   
+   
+    width:100%
 }
 
-#activeGames tr:nth-child(even){background-color: #f2f2f2;}
+#activeGames tbody {
 
-#activeGames tr:hover {background-color: #ddd;}
+    float: left;
+    width:100%;
+}
 
-#activeGames th {
+#activeGames tbody td {
     padding-top: 12px;
     padding-bottom: 12px;
-    text-align: left;
+    width:19.355%;
+    text-align: center;
+    
+}
+
+
+#activeGames tr:nth-child(even){
+    background-color: #17277e;
+    color: rgb(5, 238, 17)
+}
+#activeGames tr:nth-child(odd)
+{
+    background-color: #75b0e0;
+    color:rgb(199, 240, 17)
+
+
+}
+
+#activeGames tr:hover {background-color: rgb(236, 17, 65);}
+
+#activeGames thead th{
+    padding-top: 12px;
+    padding-bottom: 12px;
+    text-align: center;
     background-color: rgb(38, 54, 56);
-    color: white;
+    color: #95B6E8;
+    width:19%;
+
+    
 }
 #buttonTable{
 
@@ -90,5 +125,28 @@ input[type=text], select {
     border-radius: 4px;
     box-sizing: border-box;
 }
+.table-fixed thead {
+    width: 97%;
+  }
+  .table-fixed tbody {
+    height: 230px;
+    overflow-y: auto;
+    width: 100%;
+  }
+  .table-fixed thead, .table-fixed tbody, .table-fixed tr, .table-fixed td, .table-fixed th {
+    display: block;
+  }
+  .table-fixed tbody td, .table-fixed thead > tr> th {
+    float: left;
+    border-bottom-width: 0;
+  }
 
+  .enterState {
 
+    width:500px; 
+    height:500px; 
+    position: absolute;
+    top:7%;
+    left: 25%;
+    border:1px solid black
+  }
