--- a/app/templates/components/greggames-header.hbs
+++ b/app/templates/components/greggames-header.hbs
@@ -1,3 +1,15 @@
-<div class="jumbotron container text-center">
-    <h1>Craig's Gregarious Games</h1>
+<div id="gghomecont">
+    <div class="container jumbotron" id="ggHeader">
+
+        <h1 id="ggHeaderText">Craig's Gregarious Games</h1>
+
+    </div>
+    <div class="container" id="ggNav">
+        {{greggames-nav}}
+    </div>
+    <div class="container">
+            {{yield}}
+
+    </div>
+
 </div>
