--- a/app/templates/greggames/about.hbs
+++ b/app/templates/greggames/about.hbs
@@ -1,1 +1,12 @@
-<p>This is the about me page</p>
+{{#greggames-header}}
+
+{{#greggames-simple}}
+<div class="container" id="gregAboutCont">
+    <p id="gregAboutText">
+        This is website hosting Craig's most amazing, wondering, very, very good games.
+        Click on the links above to explore!!!!</p>
+</div>
+
+{{/greggames-simple}}
+
+{{/greggames-header}}
