--- a/app/templates/cards/index.hbs
+++ b/app/templates/cards/index.hbs
@@ -1,11 +1,11 @@
-{{greggames-header}}
+{{!-- {{greggames-header}}
 <div id="gregdiv" class="container">
 
 
 <table id="gregtable">
 {{#each model as |cardgame|}}
 <tr>
-<td><div>{{#link-to "cards.spades"}}<button class="greglink">Spades</button>{{/link-to}}
+<td><div>{{#link-to "cards.spades.games"}}<button class="greglink">Spades</button>{{/link-to}}
 </div></td>
 </tr>
 {{/each}}
@@ -13,4 +13,4 @@
 </table>
 
 
-</div> 
+</div>  --}}
