probably doesn't work

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -4,5 +4,6 @@
 @import "./greggames_about.scss";
 @import "./greggames_nav.scss";
 @import "./cardgames_home.scss";
+@import "./spadegame_home.scss";
     
 
