--- a/app/templates/components/greggames-homepage.hbs
+++ b/app/templates/components/greggames-homepage.hbs
@@ -1,1 +1,4 @@
-{{#greggames-header}} {{#greggames-simple}} This is Home {{/greggames-simple}} {{/greggames-header}}
+
+{{#greggames-simple}} This is Home 
+
+{{/greggames-simple}} 
