--- a/app/templates/greggames/cards/spades.hbs
+++ b/app/templates/greggames/cards/spades.hbs
@@ -1,1 +1,6 @@
-{{outlet}}
+<div class="container" id="spadeHomeCont">
+
+    <div class="panel" id="spadePanel">Spades</div>
+    {{outlet}}
+
+</div>
