--- a/app/templates/greggames/cards.hbs
+++ b/app/templates/greggames/cards.hbs
@@ -1,9 +1,1 @@
-{{#greggames-header}}
-
-    <section>Card Games</section>
-
-
-    {{greggame-list games=model}}
-
-
-{{/greggames-header}}
+ {{outlet}}
