--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -5,5 +5,7 @@
 @import "./greggames_nav.scss";
 @import "./cardgames_home.scss";
 @import "./spadegame_home.scss";
+@import "./newgame_modal.scss";
+@import "./spadegame_list.scss"
     
 
