--- a/app/templates/components/newgame-modal.hbs
+++ b/app/templates/components/newgame-modal.hbs
@@ -16,7 +16,7 @@
 
 </div>
 
-<div class="col-sm container buttonContainer">
+<div class="col-md-16 container buttonContainer">
 <div class="container" id="newGameModalButtonDiv">
     <button {{action "createNewGame"}} id="newGameModalButton">Create New Game</button>
 </div>
