added logic to get game

--- a/app/styles/spadegame_home.scss
+++ b/app/styles/spadegame_home.scss
@@ -23,5 +23,5 @@
     background-color: rgb(151, 129, 122);
     color: darkturquoise;
     font-size:500%;
-    padding-left: 2%;
+    //padding-left: 2%;
 }
