--- a/app/templates/greggames/cards/spades.hbs
+++ b/app/templates/greggames/cards/spades.hbs
@@ -1,7 +1,7 @@
 <div class="container" id="spadeHomeCont">
 
-    <div class="panel" id="spadePanel">Spades</div>
-    
+    <div class="container" id="spadePanel">Spades</div>
+    {{#link-to "greggames.cards.spades.games"}} View Games{{/link-to}}
     {{outlet}}
 
 </div>
