added image for back of card

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -6,6 +6,8 @@
 @import "./cardgames_home.scss";
 @import "./spadegame_home.scss";
 @import "./newgame_modal.scss";
-@import "./spadegame_list.scss"
+@import "./spadegame_list.scss";
+@import "./spadegame_table.scss";
+@import "./spadeplayer_seat.scss";
     
 
