--- a/app/styles/greggames_header.scss
+++ b/app/styles/greggames_header.scss
@@ -3,6 +3,7 @@
         border: 1px solid black;
        
         background-color: darkblue;
+        width: 100%;
 }
     
 #ggHeaderText{
@@ -26,7 +27,7 @@
     
 body{
         
-                background-color:lightblue;
+                background-color:lightgrey;
         }
     
 #ggBody{
