added logic to pring out cards looks a bit weird on smaller screens

--- a/app/styles/spadegame_table.scss
+++ b/app/styles/spadegame_table.scss
@@ -1,6 +1,6 @@
 .spadeGameTable{
 
-    border: 1px solid black;
+    border: 10px dotted yellow;
     background-color: green;
     height: 90%;
     position: absolute;
