--- a/app/styles/spadeplayer_seat.scss
+++ b/app/styles/spadeplayer_seat.scss
@@ -5,46 +5,13 @@
     border: 1px solid black;
     position: absolute;
     width: 90%;
+    top: 10%;
     z-index:10;
+    transform: rotate(90deg);
 }
 
 .cardSize{
 
     height:95%;
     width:10%;
-}
-.backofcard{
-
-    
-   
-    position: relative;
-    background-color: white;
-    z-index: 1;
-}
-
-.backofcard2{
-    
-
-        right:5%;
-
-        position: relative;
-        background-color: white;
-        z-index: 2;
-}
-.backofcard3{
-    
-
-        right:10%;
-
-        position: relative;
-        background-color: white;
-        z-index: 3;
-}
-.backofcard4{
-
-        right:15%;
-
-        position: relative;
-        background-color: white;
-        z-index: 4;
 }
