--- a/app/templates/components/spadegame-table.hbs
+++ b/app/templates/components/spadegame-table.hbs
@@ -1,5 +1,7 @@
 <div class="container spadeGameTable">
 
- 
- <div class="container">{{spadeplayer-seat}}</div>
+
+    <div class="container playerSeat" id="playerCards">
+        {{spadeplayer-seat player=gameState.teams.TEAM1.players.PLAYER1}}
+    </div>
 </div>
