seems to work with playing cards have to handle error handling

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -9,5 +9,6 @@
 @import "./spadegame_list.scss";
 @import "./spadegame_table.scss";
 @import "./spadeplayer_seat.scss";
+@import "./bidding_modal.scss";
     
 
