--- a/app/styles/spadegame_table.scss
+++ b/app/styles/spadegame_table.scss
@@ -53,3 +53,20 @@
     height:200px;
     width: 200px;
 }
+
+.teamPointsReset{
+
+    height: 10%;
+    width:20%;
+    background-color: black;
+    color: white;
+    border: 5px solid yellow;
+}
+
+.gameMetaData{
+    height: 5%;
+    width:20%;
+    background-color: black;
+    color: white;
+    border: 5px solid yellow;
+}
