--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -10,5 +10,6 @@
 @import "./spadegame_table.scss";
 @import "./spadeplayer_seat.scss";
 @import "./bidding_modal.scss";
+@import "./error_modal.scss";
     
 
