--- a/app/templates/components/spadeplayer-seat.hbs
+++ b/app/templates/components/spadeplayer-seat.hbs
@@ -2,28 +2,29 @@
 
 {{#if isShowPlayerCards}}
 
-<img {{action "playerCard" card}} src={{image-src "/assets/images/cards/" card.name ".jpeg"}} id={{id-formatter player.name index}} class="cardSize cardDetails"> 
-
+{{!-- <img {{action "playerCard" card}} src={{image-src "/assets/images/cards/" card.name ".jpeg"}} id={{id-formatter player.name index}} class="cardSize cardDetails">  --}}
+{{card-generator card=card cardName=card.name index=index playerCard="playerCard"}}
 {{else}}
-<img src="/assets/images/cards/BACK_CARD.jpeg" id={{id-formatter player.name index}}> 
+{{card-generator cardName="BACK_CARD" index=index}} 
 {{/if}}
 {{/each}}
+
 <div class="playerPoints"><p>Player Bid: {{player.playerBid}}</p>
 <p>Player Score: {{player.playerCurrentScore}}</p>
 </div>
-
+{{#if player.turn}}
+<div class="circleBase playerTurn"></div>
+{{/if}}
 
 <div class="playCardDiv container">
     
-
-    {{#if player.error}}
-
-    {{else}}
+    
+  
     {{#if hasPlayingCard}}
     <img src={{image-src "/assets/images/cards/" displayedCard ".jpeg"}} class="playingCardSize">
     {{/if}}
-    {{/if}}
-
+ 
+    
 </div>
 
 
