--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -11,5 +11,6 @@
 @import "./spadeplayer_seat.scss";
 @import "./bidding_modal.scss";
 @import "./error_modal.scss";
+@import "./spadescore_modal.scss";
     
 
