--- a/app/styles/spadegame_table.scss
+++ b/app/styles/spadegame_table.scss
@@ -7,6 +7,7 @@
     width: 80%;
     margin-bottom: 10%;
     margin-left: -5%;
+
     
 }
 
@@ -28,7 +29,21 @@
     background-color: blue;
 }
 
+.teamScoreBoard{
 
+    position:absolute;
+    left:75%;
+    top:85%;
+    width:20%;
+    height:1%;
+  
+}
+.teamPointsTable{
+
+    width:100%;
+    height:10%;
+    position: absolute;
+}
 .teamOne{
 
     border:1px solid black;
@@ -53,20 +68,34 @@
     height:200px;
     width: 200px;
 }
-
+.teamData{
+    width:100%;
+}
 .teamPointsReset{
 
-    height: 10%;
-    width:20%;
+
     background-color: black;
     color: white;
+    width:50%;
+    height: 100px;
+    position: relative;
     border: 5px solid yellow;
+   
+    font-size:100%;
 }
 
 .gameMetaData{
-    height: 5%;
-    width:20%;
+
+    width:100%;
+    right:80%;
     background-color: black;
     color: white;
+
     border: 5px solid yellow;
+}
+
+.spadesWinOrLose{
+
+    background-color: orange;
+    width:20%;
 }
