--- a/app/templates/greggames/cards/spades/games/game/players/player.hbs
+++ b/app/templates/greggames/cards/spades/games/game/players/player.hbs
@@ -3,32 +3,25 @@
 
 
 <div class="container playerSeatNorth">
-    {{spadeplayer-seat player=model.seats.playerNorth playerView=model.playerView previousTrick=model.previousTrick previousHand=model.previousHand}}
-
-    <div class="teamName">Team: {{model.seats.playerNorth.team}}</div>
-    <div class="playerNameDisplay">Player: {{model.seats.playerNorth.name}}</div>
+    {{spadeplayer-seat player=model.seats.playerNorth playerView=model.playerView previousTrick=model.previousTrick previousHand=model.previousHand gameNotification=model.gameNotification isTrickOver=model.trickOver isHandOver=model.handOver}}
 
 </div>
 
 <div class="container playerSeatWest">
-    {{spadeplayer-seat player=model.seats.playerWest playerView=model.playerView previousTrick=model.previousTrick previousHand=model.previousHand}}
-    <div class="teamName">Team: {{model.seats.playerWest.team}}</div>
-    <div class="playerNameDisplay">Player: {{model.seats.playerWest.name}}</div>
+    {{spadeplayer-seat player=model.seats.playerWest playerView=model.playerView previousTrick=model.previousTrick previousHand=model.previousHand gameNotification=model.gameNotification isTrickOver=model.trickOver isHandOver=model.handOver}}
+
 
 </div>
 
 <div class="container playerSeatEast">
-    {{spadeplayer-seat player=model.seats.playerEast playerView=model.playerView previousTrick=model.previousTrick previousHand=model.previousHand}}
-    <div class="teamName">Team: {{model.seats.playerEast.team}}</div>
-    <div class="playerNameDisplay">Player: {{model.seats.playerEast.name}}</div>
+    {{spadeplayer-seat player=model.seats.playerEast playerView=model.playerView previousTrick=model.previousTrick previousHand=model.previousHand gameNotification=model.gameNotification isTrickOver=model.trickOver isHandOver=model.handOver}}
+
 
 </div>
 
 <div class="container playerSeatSouth">
-    {{spadeplayer-seat player=model.seats.playerSouth playerView=model.playerView currTurn=model.currTurn playerCard="playerCard" previousTrick=model.previousTrick previousHand=model.previousHand}}
+    {{spadeplayer-seat player=model.seats.playerSouth playerView=model.playerView currTurn=model.currTurn playerCard="playerCard" gameView=model previousTrick=model.previousTrick previousHand=model.previousHand gameNotification=model.gameNotification isTrickOver=model.trickOver isHandOver=model.handOver}}
     {{bidding-modal playerBid="playerBid" gameView=model}}
-    <div class="teamName">Team: {{model.seats.playerSouth.team}}</div>
-    <div class="playerNameDisplay">Player: {{model.seats.playerSouth.name}}</div>
     {{#if model.seats.playerSouth.error}}
 
     <div class="container">{{error-modal player=model.seats.playerSouth closeErrorModal="closeErrorModal"}}</div>
